# TrackingSandbox

./: CMakeLists.txt  LICENSE  README.md  TrackingSandbox.cpp  outline.txt
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  cue_list_wasm.js  cue_list_wasm.wasm
google_tests/: CMakeLists.txt  test_cue_list.cpp
include/tracking_sandbox/: cue_list_interface.h
src/: channel.cpp  channel.h  console_interface.cpp  console_interface.h  cue.cpp  cue.h  cue_list.cpp  cue_list.h  cue_list_wrapper.cpp  main.cpp  move_instruction.cpp  move_instruction.h  test
